# wbenny-ziplib-cmake

./: CMakeLists.txt  README.md  portfile.cmake  usage  vcpkg.json
Source/ZipLib/extlibs/bzip2/: CMakeLists.txt  bzip2.vcxproj
Source/ZipLib/extlibs/lzma/: 7z.h  CMakeLists.txt  lzma.vcxproj
Source/ZipLib/extlibs/zlib/: CMakeLists.txt  zlib.vcxproj
